--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.23.0</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -152,4 +158,6 @@
             </build>
         </profile>
     </profiles>
+
+
 </project>
