--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -15,3 +15,5 @@ jobs:
           distribution: 'adopt'
       - name: Lint with PMD
         run: ./mvnw pmd:check
+      - name: Lint with Checkstyle
+        run: ./mvnw checkstyle:check
